add some dependencies

--- a/ch3/src/main/resources/application.properties
+++ b/ch3/src/main/resources/application.properties
@@ -27,7 +27,7 @@ endpoints.sensitive=true
 #---------------------------------------------------------------------------##
 ## Thymeleaf configuration:
 spring.thymeleaf.cache=false
-spring.resources.cache-period=0
+# spring.resources.cache-period=0
 spring.thymeleaf.mode=HTML5
 
 ##---------------------------------------------------------------------------##
@@ -40,7 +40,7 @@ spring.datasource.url=jdbc:h2:mem:dataSource;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=
 #spring.datasource.url=jdbc:h2:mem:dataSource
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=qwer1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
