--- a/ch3/src/main/resources/application.properties
+++ b/ch3/src/main/resources/application.properties
@@ -27,13 +27,15 @@ endpoints.sensitive=true
 #---------------------------------------------------------------------------##
 ## Thymeleaf configuration:
 spring.thymeleaf.cache=false
-# spring.resources.cache-period=0
+spring.resources.cache.period=0
 spring.thymeleaf.mode=HTML5
 
 ##---------------------------------------------------------------------------##
 ## H2 Servlet settings for DB
 
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.h2.path=/admin/h2
 
 spring.datasource.url=jdbc:h2:mem:dataSource;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 
